major changes tmdb revamped && style

-- asigned download link corresponds to the ep. only fetch data if download link available. some css fixes and changes 


--removed effect from swiper(choppyness)

--added redis caching
2/10/23

--caching added to supabase data
2/10/23

--smooth scroll on swiper
3/10/23

--some movie page css
5/10/23

-- conditional rendering if movie(anime)
6/10/23

-- few fixes

-- some image load handling and few fixes
8/10/2023

-- finished with search 
11/10/2023

-- silly fix for search when anime is a movie, added alt in every image, added redis caching in search

-- removed redis cache from main slider